test/bad/functions/call06.px

func f(Int x) def
    return

f(x=false)
